--- a/HR/employee_form.html
+++ b/HR/employee_form.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>新人報到表單</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>新人信息填寫表單</title>
 </head>
 <body>
-    <h1>請填寫您的信息</h1>
+    <h1>新人填寫表單</h1>
     <form method="POST">
-        姓名: <input type="text" name="name" required><br>
-        薪資: <input type="text" name="salary" required><br>
-        <input type="submit" value="提交">
+        <label for="name">姓名:</label>
+        <input type="text" id="name" name="name"><br>
+
+        <label for="salary">薪資:</label>
+        <input type="text" id="salary" name="salary"><br>
+
+        <button type="submit">提交</button>
     </form>
 </body>
 </html>
