--- a/HR/generate_link.html
+++ b/HR/generate_link.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>生成員工連結</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>生成連結</title>
 </head>
 <body>
-    <h1>生成新的員工填寫表單連結</h1>
-    <form method="POST">
-        <label for="name">員工姓名:</label>
-        <input type="text" id="name" name="name" required><br><br>
+    <h1>生成員工填寫表單的連結</h1>
+    <form action="/submit" method="POST">
+        <label for="name">姓名:</label>
+        <input type="text" name="name" id="name" required>
+        <br><br>
         <label for="salary">薪資:</label>
-        <input type="text" id="salary" name="salary" required><br><br>
-        <input type="submit" value="生成連結">
+        <input type="text" name="salary" id="salary" required>
+        <br><br>
+        <button type="submit">提交</button>
     </form>
 </body>
 </html>
